@@ -77,6 +77,12 @@ If it is not set, the default installation path will be used.
 Game definitions
 .RE
 
+.SH SIGNALS
+.B USR1
+.RS
+Shutdown the meta-server gracefully (can be used to check for memory leaks)
+.RE
+
 .SH BUGS
 Do not include port 5557 in the
 .I \-\-port\-range
