@@ -1,6 +1,8 @@
 2011-10-20  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/trade.c: make reindent.
 	* meta-server/main.c: Fixed a memory leak.
+	* docs/pioneers-meta-server.6, meta-server/main.c: Allow gracefull
+	shutdown of the meta-server by sending SIGUSR1. 
 
 2011-10-18  Roland Clobus <rclobus@rclobus.nl>
 	* common/gtk/game-rules.c: Turn off pirate when there are no ships.
